--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "npm run lint && NODE_ENV=test mocha --trace-warnings",
     "build": "npm run lint && rm -rf ./dist && ./node_modules/.bin/tsc",
     "lint": "./node_modules/.bin/tslint --format prose -c ./tslint.json src/**/*.ts test/**/*.ts",
-    "cov": "NODE_ENV=test nyc mocha",
+    "cov": "NODE_ENV=test nyc --reporter=html mocha",
     "ci": "npm run test",
     "authors": "git log --format='%aN <%aE>' | sort -u > AUTHORS"
   },
@@ -30,12 +30,14 @@
     "shimmer": "^1.2.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.0.10",
     "@types/mocha": "^2.2.41",
     "@types/node": "^8.5.2",
-    "debug": "^3.1.0",
+    "chai": "^4.1.2",
     "mocha": "^4.1.0",
     "nyc": "^11.4.1",
     "nyc-ts-patch": "^1.0.0",
+    "sinon": "^4.1.3",
     "ts-node": "^4.1.0",
     "tslint": "^5.8.0",
     "typescript": "^2.6.2"
