--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,11 +3,7 @@
 
 name: Node.js CI
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -25,7 +21,9 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm i
+    - run: npm install && npm install codecov
     - run: npm run build --if-present
+    - run: npm run lint
     - run: npm run cov
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v2
