--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,8 +22,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install && npm install codecov
-    - run: npm run build --if-present
-    - run: npm run lint
+    - run: npm run build
     - run: npm run cov
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
